force-app/main/default/objects/LVC_Polygon__c/LVC_Polygon__c.object-meta.xml
<CustomObject>
    <label>Polígono</label>
    <nameField>
        <label>Polígono</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Polígonos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>