force-app/main/default/objects/LVC_Polygon__c/fields/ActivityId__c.field-meta.xml
<CustomField>
    <fullName>ActivityId__c</fullName>
    <formula>IF( ISPICKVAL(Type__c, &quot;T2&quot;), 70, 98)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>ActivityId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>