force-app/main/default/objects/LVC_Polygon__c/fields/DistributionCenter__c.field-meta.xml
<CustomField>
    <fullName>DistributionCenter__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Centro De Distribución</label>
    <referenceTo>LVC_DistributionCenter__c</referenceTo>
    <relationshipLabel>Polígonos</relationshipLabel>
    <relationshipName>Polygons</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>