force-app/main/default/objects/LVC_Polygon__c/fields/PolygonExternalId__c.field-meta.xml
<CustomField>
    <fullName>PolygonExternalId__c</fullName>
    <externalId>true</externalId>
    <label>Poligono External Id</label>
    <length>50</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>