force-app/main/default/objects/LVC_Polygon__c/fields/TownId__c.field-meta.xml
<CustomField>
    <fullName>TownId__c</fullName>
    <label>TownId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>