force-app/main/default/objects/LVC_Polygon__c/fields/ZipCode__c.field-meta.xml
<CustomField>
    <fullName>ZipCode__c</fullName>
    <label>Código Postal</label>
    <length>20</length>
    <type>Text</type>
</CustomField>